# MTSD-lab3

lab-03-own-project-cpp/: .dockerignore  .gitignore  Dockerfile
lab-03-own-project-cpp/dependencies/: dependencies.txt  install_dependencies.sh
lab-03-own-project-cpp/src/: CMakeLists.txt  main.cpp  remove_whitespace.h  sample_project.h  test.cpp
lab-03-starter-project-golang/: .dockerignore  Dockerfile  main.go
lab-03-starter-project-python/: .dockerignore  Dockerfile
lab-03-starter-project-python/requirements/: requirements.txt
lab-03-starter-project-python/spaceship/routers/: api.py
